digitalocean/k8s/overlays/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tiqr-agent
  labels:
    app.kubernetes.io/name: tiqr-agent
    app.kubernetes.io/part-of: tiqr
